# Lober

./: Install-issues.txt  LICENSE  README.Rmd  README.html  README.md  READMEforInstall.txt
libisInside-2.1/: AUTHORS  INSTALL.txt  Makefile  NEWS  config.h  config.status  configure  configure.ac  libtool
libisInside-2.1/doc/: Makefile  Makefile.am  Makefile.in
libisInside-2.1/man/: Makefile  Makefile.am  Makefile.in  d_isinside.3  isinside.3  isinside.h.3  libisInside.h.3  libisinside.3
libisInside-2.1/src/: Makefile  Makefile.am  Makefile.in  test1  test1.cpp  test2  test2.cpp  test3  test3.cpp  test4  test4.cpp
libisInside-2.1/src/.deps/: test1.Po  test2.Po  test3.Po  test4.Po
libisInside-2.1/src/.libs/: test1  test2  test3  test4
libisInside-2.1/src/libisInside/: Makefile  Makefile.am  Makefile.in  isInside.h  libisInside.cpp  libisInside.la  libisInside.lo  libisInside_3d.cpp  libisInside_3d.lo  version.cpp  version.h  version.lo
libisInside-2.1/src/libisInside/.deps/: libisInside.Plo  libisInside_3d.Plo  version.Plo
libisInside-2.1/src/libisInside/.libs/: libisInside-2.1.0.dylib  libisInside.dylib  libisInside.la  libisInside.lai
lober-1.8/: INSTALL  Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac
lober-1.8-test/: lober.sh  s.n  u.n
lober-1.8/doc/: Makefile  Makefile.am  Makefile.in  loberlight.dvi  loberlight.ps  loberlight.tex
tests/: lobeb.dat.00000  lobeb.dat.00001  lobeb.dat.00002  lobeb.dat.00003  lobeb.dat.00004  lobeb.dat.00005  lobeb.dat.00006  lobeb.dat.00007  lober.sh  lober_ovp.sh
(+66 files in other folders)
