AC_INIT(src/test1.cpp)
#AC_DEFINE("PACKAGE_VERSION",2.1)
AM_INIT_AUTOMAKE(libisInside,2.1)
AM_CONFIG_HEADER(config.h)
AM_PROG_LIBTOOL
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_PROG_LIBTOOL
AC_OUTPUT(src/libisInside/Makefile src/Makefile Makefile man/Makefile doc/Makefile)
#AC_OUTPUT(Makefile src/Makefile src/libtricubic/Makefile)
