lib_LTLIBRARIES = libisInside.la
libisInside_la_SOURCES = isInside.h libisInside.cpp libisInside_3d.cpp version.h version.cpp
#libisInside_la_LDFLAGS = -version-info 2:1:0
libisInside_la_LDFLAGS = -release 2.1.0
#lib_LIBRARIES = libtricubic.so
#libtricubic_so_SOURCES = tricubic.h ltricubic_utils.h coeff.h libtricubic.cpp tricubic_utils.cpp
include_HEADERS = isInside.h
